# automaton-auditor-swarm

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REPORT.md  Dockerfile  MASTER_PLAN.md  PRODUCTION_REPORT.md  README.md  main.py  pyproject.toml
audit/: report_repo2.json
audit/langsmith_logs/: trace_019c9ee8-6a01-7c12-b422-55a18837cfab.json
audit/report_bypeer_received/: peer_audit_report.md
audit/report_onpeer_generated/: report_automation-auditor.json  report_automation-auditor.md
audit/report_onself_generated/: report_automation-auditor.json  report_automation-auditor.md  report_automaton-auditor-swarm.json  report_automaton-auditor-swarm.md  report_test-repo.json  report_test-repo.md
config/: batch_audits.json
rubric/: week2_rubric.json
runners/: run_auditor.py  run_doc_analyst.py
src/: graph.py  state.py  utils.py
src/nodes/: batch.py  detectives.py  judges.py  justice.py
src/tools/: forensics.py
tests/: test_rubric.py  test_state.py  verify_batch.py  verify_forensics.py  verify_reporting.py
